--- a/pushups.rmd
+++ b/pushups.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Who Does More Pushups"
-author: "Your Name"
-date: "Fall 2020"
+author: "Arlene Faye Salvador"
+date: "November 2020"
 output:
 html_document:
 number_sections: true
